A little more on the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@ To create a production bundle, use `npm run build` or `yarn build`.
 <div class="user-dropdown">
   
  <h4 class="user"><i class="fas fa-user-circle"></i><span id="user"> 0xB0230....3654</span></h4>
-
+ 
  <div class="dropdown-content" >
     <a>My Fundraisers</a>
     <a>My Contributions</a>
@@ -81,7 +81,11 @@ To create a production bundle, use `npm run build` or `yarn build`.
               </div>
           </div>
       </div>
+      <div>
+      </div>
          <button class="contribute-button">Contribute</button>
+         <p>Can't contribute in Crypto Currencies?</p>
+         <p>Contribute on <a href="">Ketto</a> , <a href="">GoFundMe</a></p>
       <div class="contributions-div">
            <h2>Latest Contributions</h2>
            <h4 class="contribution">0xB0230....3654 : <span class="contribution-amount">0.001 ether (100$)</span></h4>
@@ -91,10 +95,16 @@ To create a production bundle, use `npm run build` or `yarn build`.
     
   <div class="footer-div">
     <h2>Related Documents</h2>
-
-
+    <img src="testDocuments.jpg" alt="">
+    <img src="testDocuments.jpg" alt="">
+    <img src="testDocuments.jpg" alt="">
    </div>
-  
+
+   <div class="link-div">
+    <h2>Can't Donate In CryptoCurrencies? Don't trust the fundraiser?</h2>
+    <h4>Find this fundraiser on other platforms:</h4>
+  <a  class="links" target = "_blank" href="ketto.com">Ketto</a>
+  </div>
   
       <script src="index.js"></script>
   </body>
