Create Fundraiser Page Created

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@ To create a production bundle, use `npm run build` or `yarn build`.
 <!-- Navbar -->
 <div id="navbar">
 <div class="navbar-right ">
-  <h2 class="nav-logo">Brepper</h2>
+  <h2 class="nav-logo">MangoShakes</h2>
 </div>
 <div class="navbar-left">
     <h4 class="home-page buttons">Home </h4>
    <h4 class="about buttons">How it Works</h4>
-   <h4 class="new-fundraiser buttons">Create a fundraiser</h4>
+   <h4 class="new-fundraiser buttons"> <a href="/create">Create a fundraiser</a></h4>
 </div>
 <div class="user-dropdown">
   
@@ -64,7 +64,7 @@ To create a production bundle, use `npm run build` or `yarn build`.
       <h2>Please Help Himalayas</h2>
     </div>
     <div class="main-div">
-      <img class="fundraiser-img" src="test.jpg" alt="">
+      <img class="fundraiser-img" src="Images/test.jpg" alt="">
       <h2>Lorem ipsum </h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam egestas bibendum nibh non volutpat. Cras elementum tincidunt libero. Donec porta imperdiet tortor sed tincidunt. Morbi a leo at magna aliquam fringilla bibendum vitae ipsum. Morbi sapien ex, accumsan at nibh vitae, ultricies rutrum nunc. Fusce viverra ex quis turpis pharetra mollis. Fusce eget nisl porttitor, pharetra sem bibendum, ultricies tortor. Quisque dolor metus, sodales quis ornare hendrerit, viverra ac lacus. Integer at vulputate nulla. Duis nisl diam, dapibus vel tortor accumsan, scelerisque consequat velit.</p>
       <p>Suspendisse id cursus nisl, nec porttitor velit. Aliquam nunc ipsum, porttitor vel mauris vitae, tincidunt mattis sapien. Duis vitae enim ac justo congue fringilla. Nam eu nunc eros. Suspendisse ultricies porta tempor. Nulla auctor, lorem eu porttitor iaculis, libero nibh gravida mauris, quis suscipit massa ante in augue. Quisque porta enim justo, nec sollicitudin libero auctor vel. Proin mi nulla, interdum vitae ornare in, porttitor nec ipsum. Duis tempus ut mauris molestie fringilla. Duis auctor neque eget ligula fermentum tincidunt. Nunc nec leo et tellus dapibus maximus ut vitae tortor. Sed efficitur lorem nisi, at consequat erat convallis et. In et arcu quis arcu pharetra feugiat nec quis purus. Proin condimentum, sapien sit amet condimentum viverra, sem leo feugiat nibh, a ullamcorper elit metus nec sapien. Mauris dignissim auctor tellus, at ultrices metus pellentesque eget.</p>
@@ -74,11 +74,11 @@ To create a production bundle, use `npm run build` or `yarn build`.
          <h4>Raised: 100$</h4>
          <h5>Out of <span>300$</span> goal </h5>
          <div class="progress-container" id="progress-container">
-          <div class="progress" id="progress">
+           <div class="progress" id="progress">
               <div class="duration-wrapper">
                   <span id="current-time">100$</span>
                   <span id="duration">300$</span>
-              </div>
+             </div>
           </div>
       </div>
       <div>
@@ -95,15 +95,15 @@ To create a production bundle, use `npm run build` or `yarn build`.
     
   <div class="footer-div">
     <h2>Related Documents</h2>
-    <img src="testDocuments.jpg" alt="">
-    <img src="testDocuments.jpg" alt="">
-    <img src="testDocuments.jpg" alt="">
+    <img src="Images/testDocuments.jpg" alt="">
+    <img src="Images/testDocuments.jpg" alt="">
+    <img src="Images/testDocuments.jpg" alt="">
    </div>
 
    <div class="link-div">
     <h2>Can't Donate In CryptoCurrencies? Don't trust the fundraiser?</h2>
     <h4>Find this fundraiser on other platforms:</h4>
-  <a  class="links" target = "_blank" href="ketto.com">Ketto</a>
+  <a class="links" target = "_blank" href="ketto.com">Ketto</a>
   </div>
   
       <script src="index.js"></script>
