--- a/public/CreateFund.html
+++ b/public/CreateFund.html
@@ -12,7 +12,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js" integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/images/mango.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
 </head>
@@ -36,12 +36,12 @@ To create a production bundle, use `npm run build` or `yarn build`.
 <!-- Navbar -->
 <div id="navbar">
 <div class="navbar-right ">
-  <h2 class="nav-logo">MangoShakes</h2>
+  <h2 class="nav-logo"><img class ="mango-logo"src="Images/mango.png">MangoShakes</h2>
 </div>
 <div class="navbar-left">
-    <h4 class="home-page buttons">Home </h4>
+    <h4 class="home-page buttons"><a href="/">Home </a></h4>
    <h4 class="about buttons">How it Works</h4>
-   <h4 class="new-fundraiser buttons">Create a fundraiser</h4>
+   <h4 class="new-fundraiser buttons"><a href="/create">Create a fundraiser</a></h4>
 </div>
 <div class="user-dropdown">
   
@@ -58,7 +58,7 @@ To create a production bundle, use `npm run build` or `yarn build`.
 
 <!-- Create Funding  -->
 <div class="create-div">
-  <h2 >Create A Fundraiser</h2> 
+  <h2>Create A Fundraiser</h2> 
   <div class="form-div">
      
     <form id="create-form"action="/">
