More changes on fundraiser page

--- a/public/fund.html
+++ b/public/fund.html
@@ -57,6 +57,9 @@ To create a production bundle, use `npm run build` or `yarn build`.
 </div>  
  CONTRACT DETAILS TO BE DISPLAYED HERE
 
+ <div>Goal: <span id="goal_value"></span></div>
+ <div>Deadline: <span id="deadline_value"></span></div>
+ <div>RaisedAmount: <span id="raisedAmount_value"></span></div>
 
  <script src="fund.js"></script>
  </body>
