--- a/public/fund.html
+++ b/public/fund.html
@@ -7,12 +7,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js" integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="shortcut icon" href="/images/mango.png" type="image/x-icon">
+<link rel="shortcut icon" href="/img/mango.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
 </head>
@@ -36,7 +36,7 @@ To create a production bundle, use `npm run build` or `yarn build`.
 <!-- Navbar -->
 <div id="navbar">
 <div class="navbar-right ">
-  <h2 class="nav-logo"><img class ="mango-logo"src="Images/mango.png">MangoShakes</h2>
+  <h2 class="nav-logo"><img class ="mango-logo"src="img/mango.png">MangoShakes</h2>
 </div>
 <div class="navbar-left">
     <h4 class="home-page buttons"><a href="/">Home </a></h4>
@@ -61,6 +61,6 @@ To create a production bundle, use `npm run build` or `yarn build`.
  <div>Deadline: <span id="deadline_value"></span></div>
  <div>RaisedAmount: <span id="raisedAmount_value"></span></div>
 
- <script src="fund.js"></script>
+ <script src="js/fund.js"></script>
  </body>
  </html>
