--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js" integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="shortcut icon" href="/images/mango.png" type="image/x-icon">
+<link rel="shortcut icon" href="/img/mango.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
 </head>
@@ -36,7 +36,7 @@ To create a production bundle, use `npm run build` or `yarn build`.
 <!-- Navbar -->
 <div id="navbar">
 <div class="navbar-right ">
-  <h2 class="nav-logo"><img class ="mango-logo"src="Images/mango.png">MangoShakes</h2>
+  <h2 class="nav-logo"><img class ="mango-logo"src="img/mango.png">MangoShakes</h2>
 </div>
 <div class="navbar-left">
     <h4 class="home-page buttons"><a href="/">Home</a></h4>
@@ -64,7 +64,7 @@ To create a production bundle, use `npm run build` or `yarn build`.
       <h2>Please Help Himalayas</h2>
     </div>
     <div class="main-div">
-      <img class="fundraiser-img" src="Images/test.jpg" alt="">
+      <img class="fundraiser-img" src="img/test.jpg" alt="">
       <h2>Lorem ipsum </h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam egestas bibendum nibh non volutpat. Cras elementum tincidunt libero. Donec porta imperdiet tortor sed tincidunt. Morbi a leo at magna aliquam fringilla bibendum vitae ipsum. Morbi sapien ex, accumsan at nibh vitae, ultricies rutrum nunc. Fusce viverra ex quis turpis pharetra mollis. Fusce eget nisl porttitor, pharetra sem bibendum, ultricies tortor. Quisque dolor metus, sodales quis ornare hendrerit, viverra ac lacus. Integer at vulputate nulla. Duis nisl diam, dapibus vel tortor accumsan, scelerisque consequat velit.</p>
       <p>Suspendisse id cursus nisl, nec porttitor velit. Aliquam nunc ipsum, porttitor vel mauris vitae, tincidunt mattis sapien. Duis vitae enim ac justo congue fringilla. Nam eu nunc eros. Suspendisse ultricies porta tempor. Nulla auctor, lorem eu porttitor iaculis, libero nibh gravida mauris, quis suscipit massa ante in augue. Quisque porta enim justo, nec sollicitudin libero auctor vel. Proin mi nulla, interdum vitae ornare in, porttitor nec ipsum. Duis tempus ut mauris molestie fringilla. Duis auctor neque eget ligula fermentum tincidunt. Nunc nec leo et tellus dapibus maximus ut vitae tortor. Sed efficitur lorem nisi, at consequat erat convallis et. In et arcu quis arcu pharetra feugiat nec quis purus. Proin condimentum, sapien sit amet condimentum viverra, sem leo feugiat nibh, a ullamcorper elit metus nec sapien. Mauris dignissim auctor tellus, at ultrices metus pellentesque eget.</p>
@@ -95,9 +95,9 @@ To create a production bundle, use `npm run build` or `yarn build`.
     
   <div class="footer-div">
     <h2>Related Documents</h2>
-    <img src="Images/testDocuments.jpg" alt="">
-    <img src="Images/testDocuments.jpg" alt="">
-    <img src="Images/testDocuments.jpg" alt="">
+    <img src="img/testDocuments.jpg" alt="">
+    <img src="img/testDocuments.jpg" alt="">
+    <img src="img/testDocuments.jpg" alt="">
    </div>
 
    <div class="link-div">
@@ -106,6 +106,6 @@ To create a production bundle, use `npm run build` or `yarn build`.
   <a class="links" target = "_blank" href="ketto.com">Ketto</a>
   </div>
   
-      <script src="index.js"></script>
+      <script src="js/index.js"></script>
   </body>
 </html>
