--- a/public/index.html
+++ b/public/index.html
@@ -1,64 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" translate="no">
-<head> 
+
+<head>
   <title>Brepper</title>
-<script src="//code.jquery.com/jquery-1.10.2.js"></script> 
-<meta charset="utf-8" />
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js" integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="shortcut icon" href="/img/mango.png" type="image/x-icon">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="theme-color" content="#000000" />
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <meta charset="utf-8" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js"
+    integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="shortcut icon" href="/img/mango.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 </head>
+
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-<!--
-This HTML file is a template.
-If you open it directly in the browser, you will see an empty page.
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 
-You can add webfonts, meta tags, or analytics to this file.
-The build step will place the bundled scripts into the <body> tag.
+  <!-- Navbar -->
+  <div id="navbar">
+    <div class="navbar-right ">
+      <h2 class="nav-logo"><img class="mango-logo" src="img/mango.png">MangoShakes</h2>
+    </div>
+    <div class="navbar-left">
+      <h4 class="home-page buttons"><a href="/">Home</a></h4>
+      <h4 class="about buttons">How it Works</h4>
+      <h4 class="new-fundraiser buttons"><a href="/create">Create a fundraiser</a></h4>
+    </div>
+    <div class="user-dropdown">
 
-To begin the development, run `npm start` or `yarn start`.
-To create a production bundle, use `npm run build` or `yarn build`.
--->
+      <h4 class="user"><i class="fas fa-user-circle"></i><span id="user"> 0xB0230....3654</span></h4>
 
+      <div class="dropdown-content">
+        <a>My Fundraisers</a>
+        <a>My Contributions</a>
+        <a>Request and Votes</a>
+      </div>
 
-
-
-<!-- Navbar -->
-<div id="navbar">
-<div class="navbar-right ">
-  <h2 class="nav-logo"><img class ="mango-logo"src="img/mango.png">MangoShakes</h2>
-</div>
-<div class="navbar-left">
-    <h4 class="home-page buttons"><a href="/">Home</a></h4>
-   <h4 class="about buttons">How it Works</h4>
-   <h4 class="new-fundraiser buttons"><a href="/create">Create a fundraiser</a></h4>
-</div>
-<div class="user-dropdown">
-  
- <h4 class="user"><i class="fas fa-user-circle"></i><span id="user"> 0xB0230....3654</span></h4>
- 
- <div class="dropdown-content" >
-    <a>My Fundraisers</a>
-    <a>My Contributions</a>
-    <a>Request and Votes</a>
- </div>
-
-</div>
-</div>  
-
+    </div>
+  </div>
 
   <!-- Fundraiser Body -->
-  
+
   <div class="body-div">
     <div class="header-div">
       <h2>Please Help Himalayas</h2>
@@ -66,46 +58,61 @@ To create a production bundle, use `npm run build` or `yarn build`.
     <div class="main-div">
       <img class="fundraiser-img" src="img/test.jpg" alt="">
       <h2>Lorem ipsum </h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam egestas bibendum nibh non volutpat. Cras elementum tincidunt libero. Donec porta imperdiet tortor sed tincidunt. Morbi a leo at magna aliquam fringilla bibendum vitae ipsum. Morbi sapien ex, accumsan at nibh vitae, ultricies rutrum nunc. Fusce viverra ex quis turpis pharetra mollis. Fusce eget nisl porttitor, pharetra sem bibendum, ultricies tortor. Quisque dolor metus, sodales quis ornare hendrerit, viverra ac lacus. Integer at vulputate nulla. Duis nisl diam, dapibus vel tortor accumsan, scelerisque consequat velit.</p>
-      <p>Suspendisse id cursus nisl, nec porttitor velit. Aliquam nunc ipsum, porttitor vel mauris vitae, tincidunt mattis sapien. Duis vitae enim ac justo congue fringilla. Nam eu nunc eros. Suspendisse ultricies porta tempor. Nulla auctor, lorem eu porttitor iaculis, libero nibh gravida mauris, quis suscipit massa ante in augue. Quisque porta enim justo, nec sollicitudin libero auctor vel. Proin mi nulla, interdum vitae ornare in, porttitor nec ipsum. Duis tempus ut mauris molestie fringilla. Duis auctor neque eget ligula fermentum tincidunt. Nunc nec leo et tellus dapibus maximus ut vitae tortor. Sed efficitur lorem nisi, at consequat erat convallis et. In et arcu quis arcu pharetra feugiat nec quis purus. Proin condimentum, sapien sit amet condimentum viverra, sem leo feugiat nibh, a ullamcorper elit metus nec sapien. Mauris dignissim auctor tellus, at ultrices metus pellentesque eget.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam egestas bibendum nibh non volutpat. Cras elementum
+        tincidunt libero. Donec porta imperdiet tortor sed tincidunt. Morbi a leo at magna aliquam fringilla bibendum
+        vitae ipsum. Morbi sapien ex, accumsan at nibh vitae, ultricies rutrum nunc. Fusce viverra ex quis turpis
+        pharetra mollis. Fusce eget nisl porttitor, pharetra sem bibendum, ultricies tortor. Quisque dolor metus,
+        sodales quis ornare hendrerit, viverra ac lacus. Integer at vulputate nulla. Duis nisl diam, dapibus vel tortor
+        accumsan, scelerisque consequat velit.</p>
+      <p>Suspendisse id cursus nisl, nec porttitor velit. Aliquam nunc ipsum, porttitor vel mauris vitae, tincidunt
+        mattis sapien. Duis vitae enim ac justo congue fringilla. Nam eu nunc eros. Suspendisse ultricies porta tempor.
+        Nulla auctor, lorem eu porttitor iaculis, libero nibh gravida mauris, quis suscipit massa ante in augue. Quisque
+        porta enim justo, nec sollicitudin libero auctor vel. Proin mi nulla, interdum vitae ornare in, porttitor nec
+        ipsum. Duis tempus ut mauris molestie fringilla. Duis auctor neque eget ligula fermentum tincidunt. Nunc nec leo
+        et tellus dapibus maximus ut vitae tortor. Sed efficitur lorem nisi, at consequat erat convallis et. In et arcu
+        quis arcu pharetra feugiat nec quis purus. Proin condimentum, sapien sit amet condimentum viverra, sem leo
+        feugiat nibh, a ullamcorper elit metus nec sapien. Mauris dignissim auctor tellus, at ultrices metus
+        pellentesque eget.</p>
     </div>
     <div class="fundraiser-details">
-         <button class="share-button">Share</button>
-         <h4>Raised: 100$</h4>
-         <h5>Out of <span>300$</span> goal </h5>
-         <div class="progress-container" id="progress-container">
-           <div class="progress" id="progress">
-              <div class="duration-wrapper">
-                  <span id="current-time">100$</span>
-                  <span id="duration">300$</span>
-             </div>
+      <button class="share-button">Share</button>
+      <h4>Raised: 100$</h4>
+      <h5>Out of <span>300$</span> goal </h5>
+      <div class="progress-container" id="progress-container">
+        <div class="progress" id="progress">
+          <div class="duration-wrapper">
+            <span id="current-time">100$</span>
+            <span id="duration">300$</span>
           </div>
+        </div>
       </div>
       <div>
       </div>
-         <button class="contribute-button">Contribute</button>
-         <p>Can't contribute in Crypto Currencies?</p>
-         <p>Contribute on <a href="">Ketto</a> , <a href="">GoFundMe</a></p>
+      <button class="contribute-button">Contribute</button>
+      <p>Can't contribute in Crypto Currencies?</p>
+      <p>Contribute on <a href="">Ketto</a> , <a href="">GoFundMe</a></p>
       <div class="contributions-div">
-           <h2>Latest Contributions</h2>
-           <h4 class="contribution">0xB0230....3654 : <span class="contribution-amount">0.001 ether (100$)</span></h4>
-           <hr>
-      </div> 
+        <h2>Latest Contributions</h2>
+        <h4 class="contribution">0xB0230....3654 : <span class="contribution-amount">0.001 ether (100$)</span></h4>
+        <hr>
+      </div>
     </div>
-    
-  <div class="footer-div">
-    <h2>Related Documents</h2>
-    <img src="img/testDocuments.jpg" alt="">
-    <img src="img/testDocuments.jpg" alt="">
-    <img src="img/testDocuments.jpg" alt="">
-   </div>
 
-   <div class="link-div">
-    <h2>Can't Donate In CryptoCurrencies? Don't trust the fundraiser?</h2>
-    <h4>Find this fundraiser on other platforms:</h4>
-  <a class="links" target = "_blank" href="ketto.com">Ketto</a>
-  </div>
-  
-      <script src="js/index.js"></script>
-  </body>
+    <div class="footer-div">
+      <h2>Related Documents</h2>
+      <img src="img/testDocuments.jpg" alt="">
+      <img src="img/testDocuments.jpg" alt="">
+      <img src="img/testDocuments.jpg" alt="">
+    </div>
+
+    <div class="link-div">
+      <h2>Can't Donate In CryptoCurrencies? Don't trust the fundraiser?</h2>
+      <h4>Find this fundraiser on other platforms:</h4>
+      <a class="links" target="_blank" href="ketto.com">Ketto</a>
+    </div>
+
+    <script src="js/web3.js"></script>
+    <script src="js/index.js"></script>
+</body>
+
 </html>
