Changes in the UI

--- a/public/header.html
+++ b/public/header.html
@@ -1,4 +1,4 @@
-<title>MangoShakes</title>
+<title>MangoShake</title>
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <meta charset="utf-8" />
 <meta charset="UTF-8">
