--- a/public/nav.html
+++ b/public/nav.html
@@ -1,10 +1,10 @@
 <div class="navbar-right ">
-    <h2 class="nav-logo"><img class="mango-logo" src="img/mango.png">MangoShakes</h2>
+    <h2 class="nav-logo"><a href="/"><img class="mango-logo" src="img/mango.png"></a>MangoShake</h2>
   </div>
   <div class="navbar-left">
-    <h4 class="home-page buttons"><a href="/">Home</a></h4>
-    <h4 class="about buttons">How it Works</h4>
-    <h4 class="new-fundraiser buttons"><a href="/create">Create a fundraiser</a></h4>
+<a class="home-page buttons" href="/home">Home</a>
+    <a class="about buttons">How it Works</a>
+    <a class="new-fundraiser buttons"href="/create">Create a fundraiser</a>
   </div>
   <div class="user-dropdown">
 
