--- a/public/nav.html
+++ b/public/nav.html
@@ -5,6 +5,8 @@
 <a class="home-page buttons" href="/home">Home</a>
     <a class="about buttons">How it Works</a>
     <a class="new-fundraiser buttons"href="/create">Create a fundraiser</a>
+    <button on click="connect()">connect</button>
+
   </div>
   <div class="user-dropdown">
 
