Bug in connect button

--- a/public/CreateFund.html
+++ b/public/CreateFund.html
@@ -10,6 +10,7 @@
   $("#navbar").load("nav.html"); 
 });
   </script>
+  <head><link rel="shortcut icon" href="img/mango.ico"></head>
   <div id="header"></div>
 
 
