--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div class="loader">
    <img src="loaders/infinity.svg" alt="">
   </div> -->
-</div>
+  <head><link rel="shortcut icon" href="img/mango.ico"></head>
   <!-- header -->
 <div id="header"></div>
 
