Fix merge issue

--- a/public/fund.html
+++ b/public/fund.html
@@ -56,7 +56,7 @@
   <div>RaisedAmount: <span id="raisedAmount_value"></span></div>
 
   <script src="js/web3.js"></script>
-  <script src="js/fund.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
